the final project

--- a/src/timetablemanagementsystem/SubjectManage.form
+++ b/src/timetablemanagementsystem/SubjectManage.form
@@ -90,8 +90,8 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jPanel9" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jPanel2" max="32767" attributes="0"/>
+                          <Component id="jPanel5" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -103,9 +103,9 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-              <Component id="jPanel9" min="-2" pref="39" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <Component id="jPanel5" min="-2" pref="39" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" pref="34" max="-2" attributes="0"/>
@@ -674,7 +674,7 @@
         </Property>
       </Properties>
     </Component>
-    <Container class="javax.swing.JPanel" name="jPanel9">
+    <Container class="javax.swing.JPanel" name="jPanel5">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="99" red="99" type="rgb"/>
@@ -686,7 +686,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblSession" min="-2" pref="74" max="-2" attributes="0"/>
+                  <Component id="lblSession2" min="-2" pref="74" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblRoomAllocate" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -699,8 +699,6 @@
                   <Component id="lblNotAvTime" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   <Component id="lblGenTimeTables" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblViewTimeTables" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -710,12 +708,11 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblViewTimeTables" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblGenTimeTables" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblNotAvTime" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblBotOverlappingSession" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblParallelSe" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblSession" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblSession2" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblRoomAllocate" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblConSession" alignment="0" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
@@ -753,7 +750,7 @@
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblRoomAllocateMouseClicked"/>
           </Events>
         </Component>
-        <Component class="java.awt.Label" name="lblSession">
+        <Component class="java.awt.Label" name="lblSession2">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="1"/>
@@ -764,7 +761,7 @@
             <Property name="text" type="java.lang.String" value="SESSIONS"/>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblSessionMouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblSession2MouseClicked"/>
           </Events>
         </Component>
         <Component class="java.awt.Label" name="lblParallelSe">
@@ -819,17 +816,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="GENERATE TIMETABLES"/>
           </Properties>
-        </Component>
-        <Component class="java.awt.Label" name="lblViewTimeTables">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="12" style="1"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="0" red="0" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="VIEW TIMETABLES"/>
-          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblGenTimeTablesMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
